// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackCard - Snapshots > matches snapshot for feedback form 1`] = `
<div
  class="text-xl font-medium text-muted-foreground cursor-pointer hover:text-foreground transition-colors leading-6"
>
  What do you think about Pubky?
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot for icon wrapper 1`] = `
<div
  class="flex items-center justify-center size-12 p-2 rounded-md shadow-xs"
>
  <div
    class="h-12 w-12"
    data-testid="avatar"
  >
    <img
      alt="User"
      data-testid="avatar-image"
      src="https://i.pravatar.cc/150?img=68"
    />
    <div
      data-testid="avatar-fallback"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex flex-col gap-1 custom-feedback"
  data-testid="feedback-card"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Feedback
  </h2>
  <div
    class="flex flex-col gap-4 p-6 rounded-md border-dashed border border-input"
  >
    <div
      class="flex items-center justify-center size-12 p-2 rounded-md shadow-xs"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="User"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="text-xl font-medium text-muted-foreground cursor-pointer hover:text-foreground transition-colors leading-6"
    >
      What do you think about Pubky?
    </div>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col gap-1"
  data-testid="feedback-card"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
  >
    Feedback
  </h2>
  <div
    class="flex flex-col gap-4 p-6 rounded-md border-dashed border border-input"
  >
    <div
      class="flex items-center justify-center size-12 p-2 rounded-md shadow-xs"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="User"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="text-xl font-medium text-muted-foreground cursor-pointer hover:text-foreground transition-colors leading-6"
    >
      What do you think about Pubky?
    </div>
  </div>
</div>
`;
